# napkinXC

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  BOPexperiments.sh  CMakeLists.txt  Dmoz_convert_hier.py  LICENSE.md  MANIFEST.in  README.md  bop_biology_image_experiments.sh  bop_text_experiments.sh  format_code.sh  get_data.sh  google_drive_download.pl  npy_convert_hier.py  process_text_datasets.sh  pyproject.toml  remap_datasets.sh  remap_labels.py  remap_libsvm.py  results_to_tex.py  run_all.sh  setup.py  test.sh  testBOP.sh  testBOP_with_eps.sh  testOFO.sh  test_batches.sh  test_fo.sh  test_ofo.sh  test_prediction_time.sh
.github/workflows/: build-wheels.yml  build-windows-wheels.yml  cpp-build.yml  cpp-test-build.yml  cpp.yml  macos-wheels.yml  manylinux-wheels.yml  python-build.yml  python-flake8.yml  python-test-build.yml  python.yml  windows-wheels.yml
docs/: README.md  conf.py  exe_usage.rst  index.rst  python_api.rst  quick_start.rst  requirements.txt
docs/_static/: custom.css
experiments/: README.md  calculate_Jain_et_al_inv_ps.py  calculate_inv_priors.py  calculate_inv_ps.py  calculate_labels_priors.py  calculate_priors.py  calculate_w_log.py  calculate_w_pow.py  evaluate.py  get_dataset-v1.py  get_dataset.py  get_dataset.sh  predict.sh  remap_libsvm.py  scripts_utils.py  shuffle_dataset.sh  split_dataset.sh  split_dataset_and_remap.sh  test.sh  test_bc.sh  test_ofo.sh  test_prediction_time.sh  test_resume.sh  test_svbop.sh
experiments/misc/: all_vs_head_labels_perfromance.py  all_vs_top_labels_perfromance.py
experiments/oplt_aistats/: offline_iplt.sh  online_iplt.sh  oplt.sh  oplt_tree_alpha.sh  oplt_warm_start.sh
experiments/plt_jmlr/: hsm.sh  oplt.sh  plt_ensemble.sh  plt_final.sh  plt_ofo.sh  plt_optimization.sh  plt_trees.sh
experiments/psplt_sigir/: br.sh  plt_ensemble.sh  psbr.sh  psplt_ensmble.sh
python/: CMakeLists.txt  _napkinxc.cpp  datasets.py  measures.py  models.py  pynxc.cpp
python/examples/: basic.py  load_libsvm.py  napkinxc  ofo.py  online_f-measure_optimization.py  predict_with_propensities.py  predict_with_propensities_or_other_weights.py  train_predict_on_file.py  train_store_load.py
python/napkinxc/: CMakeLists.txt  datasets.py  measures.py  metrics.py  models.py  test_measures.py
python/napkinxc/_napkinxc/: CMakeLists.txt  _napkinxc.cpp
python/tests/: _test_compare_with_xclib_measures.py  _test_load_datasets.py  _test_load_libsvm.py  _test_reproducibility.py  conf.py  conftest.py  test_X_Y_inputs.py  test_basic.py  test_compare_with_xclib_measures.py  test_datasets.py  test_load_datasets.py  test_load_libsvm.py  test_measures.py  test_metrics.py  test_reproducibility.py  test_tree_structure.py
scripts/: Dmoz_convert_hier.py  Dmoz_merge_test_files.py  LSHTC1_convert_hier.py  bop_biology_image_experiments.sh  bop_text_experiments.sh  calculate_knn.py  calculate_labels_priors.py  evaluate_knn.py  gather_results.py  get_data.sh  npy_to_libsvm.py  remap_dataset.py  remap_libsvm.py  results_to_tex.py  testBOP.sh  transfrom_data.sh
src/: args.cpp  args.h  base.cpp  base.h  basic_types.h  br.cpp  br.h  data_reader.cpp  data_reader.h  ensemble.h  enums.h  hsm.cpp  hsm.h  isotonic_regression.h  kmeans.cpp  kmeans.h  knn.cpp  knn.h  libsvm_reader.cpp  libsvm_reader.h  log.cpp  log.h  main.cpp  matrix.h  measure.cpp  measure.h  metric.cpp  metric.h  misc.cpp  misc.h  model.cpp  model.h  online_optimization.h  online_training.cpp  online_training.h  ovr.h  plt.cpp  plt.h  pltree.cpp  pltree.h  (+23 more)
src/data_readers/: libsvm_reader.cpp  libsvm_reader.h  vw_reader.cpp  vw_reader.h
src/hnswlib/: visited_list_pool.h
src/ip_nsw/: L2space.h  hnswalg.h  hnswlib.h  visited_list_pool.h
src/liblinear/: linear.cpp  linear.h  tron.cpp  tron.h
src/liblinear/blas/: axpy.c  dot.c
src/liblinear_float/: tron.cpp  tron.h
src/liblinear_float/blas/: nrm2.c  scal.c
src/liblinear_weights/: linear.cpp  linear.h
src/mips_models/: br_mips.cpp  br_mips.h  mips_index.cpp  mips_index.h  svbop_mips.cpp  svbop_mips.h  ubop_mips.cpp  ubop_mips.h
src/models/: batch_plt.cpp  batch_plt.h  bloom.cpp  bloom.h  br.cpp  br.h  br_plt_neg.cpp  br_plt_neg.h  ensemble.h  extreme_text.cpp  extreme_text.h  hsm.cpp  hsm.h  hsm_ubop.cpp  hsm_ubop.h  kmeans.cpp  kmeans.h  label_tree.cpp  label_tree.h  mach.cpp  mach.h  mips_index.h  model.cpp  online_model.cpp  online_model.h  online_plt.cpp  online_plt.h  ovr.cpp  ovr.h  plg.cpp  plg.h  plt.cpp  plt.h  plt_neg.cpp  plt_neg.h  rbop.cpp  rbop.h  svbop_fagin.cpp  svbop_fagin.h  svbop_full.cpp  (+17 more)
src/utils/: robin_hood.h  threads.h
